manifest/networkpolicy/example/deny-all-engress-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
spec:
  podSelector: 
    matchLabels:
     app: secure-app
  policyTypes: 
  - Egress
  engress: [] # egress: An empty egress rule denies all outgoing traffic.
